@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillController {
    - _billRepositoriesBillRepositories: IBillRepositories
    + GenerateAndPrintBillPdf(Guid id): Task<IActionResult>
}

interface IBillRepositories<<interface>> {
    + GenerateAndPrintBillPdf(Guid id): Task<GenerateBillPdfResponseDTO>
}

class BillRepositories {
    - _billDao: BillDAO
    + GenerateAndPrintBillPdf(Guid id): Task<GenerateBillPdfResponseDTO>
}

class BillDAO {
    - _client.From<Bill> : ISupabaseTable<Bill>
    + IsFileLocked(string filePath) : bool
    + OpenAndPrintPdf(string filePath): void
    + GetBillById(Guid id) : Task<BillWithDetailsResponseDTO?> 
    + GenerateAndPrintBillPdf(Guid id): Task<GenerateBillPdfResponseDTO>
}

class Bill {
    + Id: Guid
    + ReservationId: Guid
    + TotalAmount: decimal
    + ReceivedAmount: decimal
    + ChangeAmount: decimal
    + TableId: Guid
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + CustomerId: Guid
    + ShopId: Guid
}

APIGateway -- BillController
BillController -- IBillRepositories
IBillRepositories <|.. BillRepositories
BillRepositories "1" -- "1..*" BillDAO
BillDAO "1" -- "0..*" Bill

@enduml
